--- a/odev-2/makefile
+++ b/odev-2/makefile
@@ -7,7 +7,7 @@ BIN_DIR = bin
 
 SRCS = $(wildcard $(SRC_DIR)/*.c)
 OBJS = $(patsubst $(SRC_DIR)/%.c, $(LIB_DIR)/%.o, $(SRCS))
-TARGET = $(BIN_DIR)/Main
+TARGET = $(BIN_DIR)/Test
 
 .PHONY: all clean compile run
 
